--- a/ClientApp/src/app/Round1/Round1.component.css
+++ b/ClientApp/src/app/Round1/Round1.component.css
@@ -13,7 +13,7 @@
     width: 100%;
     /* height: 300 px; */
     line-height: 30 rem;
-    background-color: #2fa8ec;
+    background-color: whitesmoke;
     font-size: 30px;
     line-height: 70px;
 }
@@ -52,6 +52,7 @@
     flex-shrink:0;
     flex-grow: 0;
 }
+
 .players{
     display: flex;
     flex-direction: row;
@@ -59,13 +60,16 @@
     align-content: space-between;
     flex-wrap: wrap;
     width: 100%;
-
 }
 
 .player{
     height: 50%;
     margin: 5px;
-    flex: 1 200px;
+    flex: 0 0 13rem;
+    overflow-x: hidden !important;
+    white-space: pre-wrap;
+    text-align: left;
+    line-height: 22px;    
 }
 
 .lender, .outside{
