--- a/ClientApp/src/app/Round1/Round1.component.html
+++ b/ClientApp/src/app/Round1/Round1.component.html
@@ -2,7 +2,13 @@
   <div class="top">
     <div class="players">
       <ng-container *ngFor="let item of members; let i = index">
-        <button mat-raised-button (click)="selectPlayer($event,i)" id="i">
+        <button mat-raised-button class="player"
+          (click)="selectPlayer($event,i)" 
+          id="i"           
+          [disabled] = "(_activeButtonId==-1 && !item.isDealDone) ? false :(item.isDealDone || !(_activeButtonId==i))"
+        >
+        <!-- logic of disable button: 1. is deal done 2. not selected -->
+
           {{item.Occupation}}<br>
           Saving: {{item.Saving}} <br>
           Products:
@@ -15,12 +21,7 @@
           </ng-container>
 
         </button>
-        <!-- <app-game-player [name]="item.Occupation"
-                         [saving]="item.Saving"
-                         (click)="selectPlayer($event)"
-                         id="item.Occupation"
-                         ></app-game-player> -->
-        <!-- <mat-card  class="player">{{item.Occupation}}</mat-card> -->
+        
       </ng-container>
     </div>
   </div>
@@ -36,20 +37,21 @@
         Player: {{curMember==null?"Please select a player" : curMember.Occupation}}</mat-card-title>
       <mat-card-content>
         <form [formGroup]="tradeForm" (ngSubmit)="buy(tradeForm)">
-          <ng-container *ngFor="let item of [1,2]">
+          <ng-container *ngFor="let item of [1,2,3,4,5]">
             <mat-list>
               <mat-list-item id="product{{item}}">
                 <mat-select formControlName="product{{item}}" (selectionChange)="getSelectedPrice($event,item)">
-                  <mat-option *ngFor="let p of products" value="{{p.Name}}" placehold="Select a product">
-                    {{p.Name}}
+                  <mat-option *ngFor="let p of productsToChoose" value="{{p}}" placehold="Select a product">
+                    {{p}}
                   </mat-option> 
                 </mat-select>
                 <p id="price{{item}}"></p>
               </mat-list-item>
             </mat-list>
           </ng-container>
-          <button mat-raised-button color="warn" >Confirm Buy</button>
+          <button mat-raised-button color="warn" >Confirm Buy</button>          
         </form>
+        <button mat-raised-button (click)="cancelDeal()" color="basic" >cancel</button>
       </mat-card-content>
     </mat-card>
     <mat-card class="outsider">
