--- a/ClientApp/src/app/Round1/Round1.component.html
+++ b/ClientApp/src/app/Round1/Round1.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <div class="page-title"> <h1>Round1</h1></div>
   <div class="top">
     <div class="players">
       <ng-container *ngFor="let item of _activePlayers; let i = index">
