--- a/ClientApp/src/app/Round2/Round2.component.css
+++ b/ClientApp/src/app/Round2/Round2.component.css
@@ -90,3 +90,11 @@
     height: 100%;
     flex:2;
 }
+
+table {
+    border-collapse: collapse;
+}
+
+table, td, th {
+    border: 1px solid black;
+}
